# SteamBanCheckerBot

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  example.env  main.py  pyproject.toml  steambot.py
config/: .gitignore  example-logging.json
steambot/: aioutils.py  bot.py  checker.py  log.py  main.py  models.py  search.py
