[tool.poetry]
name = "steambancheckerbot"
version = "0.1.0"
description = "Discord bot to check steam bans"
authors = ["Huw Jones <huw@huwcbjones.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
steamapi = {path = "external/steamapi"}
"discord.py" = "^1.5.1"
emoji = "^0.6.0"
SQLAlchemy = "^1.3.20"
APScheduler = "^3.6.3"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
